--- a/lib/src/components/lectures/lectures.html
+++ b/lib/src/components/lectures/lectures.html
@@ -1,5 +1,6 @@
 <div
-  *ngFor="let lecture of lectures">
+  *ngFor="let lecture of lectures"
+  (click)="handleLectureClick(lecture)">
 
   <h2>{{ lecture.title }}</h2>
 
