style lectures component

--- a/lib/src/components/lectures/actions/actions.html
+++ b/lib/src/components/lectures/actions/actions.html
@@ -1,6 +1,6 @@
 <material-button
   icon
-  (click)="onStarButtonClick()">
+  (click)="onStarButtonClick($event)">
 
   <material-icon
     *ngIf="!isStarChecked"
