--- a/lib/src/components/lectures/lectures.html
+++ b/lib/src/components/lectures/lectures.html
@@ -1,68 +1,73 @@
-<div
-  *ngFor="let lecture of lectures"
-  class="lecture">
+<layout
+  [menu]="MenuItem.lectures">
 
   <div
-    class="lecture_time">
+    *ngFor="let lecture of lectures"
+    class="lecture">
 
     <div
-      class="lecture_time_line">
+      class="lecture__time">
+
+      <div
+        class="lecture_time_line">
+      </div>
+
+      <div
+        class="lecture_time_start">
+
+        {{ getStartTime(lecture) }}
+      </div>
+
+      <div
+        class="lecture_time_end">
+
+        {{ getEndTime(lecture) }}
+      </div>
     </div>
 
     <div
-      class="lecture_time_start">
-
-      {{ getStartTime(lecture) }}
-    </div>
-
-    <div
-      class="lecture_time_end">
-
-      {{ getEndTime(lecture) }}
-    </div>
-  </div>
-
-  <div
-    class="lecture_info">
-
-    <div
-      class="lecture_location">
-      {{ lecture.location.title }}
-    </div>
-
-    <a
       (click)="onLectureSelect(lecture)"
-      class="lecture_title">
-      {{ lecture.title }}
-    </a>
-
-    <div
-      *ngFor="let speaker of lecture.speakers"
-      class="lecture_speaker">
-
-      <img
-        [src]="speaker.avatarPath"
-        class="lecture_speaker__avatar">
+      class="lecture__info">
 
       <div
-        class="lecture_speaker__info">
-
-        <div
-          class="lecture_speaker_info__name">
-          {{ speaker.name }}
-        </div>
-
-        <div
-          class="lecture_speaker_info_company">
-          {{ speaker.company }}
-        </div>
+        class="lecture_location">
+        {{ lecture.location.title }}
       </div>
 
       <div
-        class="lecture_actions">
+        class="lecture_title">
+        {{ lecture.title }}
+      </div>
 
-        <actions></actions>
+      <div
+        *ngFor="let speaker of lecture.speakers; let i = index"
+        class="lecture__speaker">
+
+        <img
+          [src]="speaker.avatarPath"
+          class="lecture_speaker_avatar">
+
+        <div
+          class="lecture_speaker__info">
+
+          <div
+            class="lecture_speaker_info_name">
+            {{ speaker.name }}
+          </div>
+
+          <div
+            class="lecture_speaker_info_company">
+            {{ speaker.company }}
+          </div>
+        </div>
+
+        <div
+          *ngIf="lecture.speakers.length == i + 1"
+          class="lecture__actions">
+
+          <actions></actions>
+        </div>
       </div>
     </div>
   </div>
-</div>
+</layout>
