--- a/lib/src/components/lectures/lectures.scss
+++ b/lib/src/components/lectures/lectures.scss
@@ -2,67 +2,67 @@
 
 :host {
   display: block;
-  padding: $padding-6 $padding-3;
 
   .lecture {
     display: flex;
-    margin-bottom: $padding-6;
-  }
+    padding: $padding-6 $padding-3 0;
 
-  .lecture_time {
-    margin-right: $padding-6;
+    .lecture__time {
+      margin-right: $padding-6;
 
-    .lecture_time_start {
-      @include mat-font-caption();
-      color: $mat-black;
+      .lecture_time_start {
+        @include font-caption();
+        color: $mat-black;
+        padding-bottom: $padding-3;
+      }
+
+      .lecture_time_end {
+        @include font-caption();
+      }
+    }
+
+    .lecture__info {
+      width: 100%;
+      border-bottom: 1px $mat-border-light solid;
       padding-bottom: $padding-3;
+
+      .lecture_location {
+        @include font-caption();
+        padding-bottom: $padding-3;
+      }
+
+      .lecture_title {
+        display: block;
+        padding-bottom: $padding-4;
+      }
+
+      .lecture__speaker {
+        display: flex;
+        margin-bottom: $padding-3;
+
+        .lecture_speaker_avatar {
+          display: block;
+          justify-content: center;
+          align-items: center;
+          border-radius: 50%;
+          width: 50px;
+          height: 50px;
+          margin-right: $padding-6;
+        }
+
+        .lecture_speaker_info_name {
+          @include mat-font-body();
+          padding-bottom: $padding-1;
+        }
+
+        .lecture_speaker_info_company {
+          @include font-caption();
+        }
+
+        .lecture__actions {
+          margin-left: auto;
+        }
+      }
     }
-
-    .lecture_time_end {
-      @include mat-font-caption();
-    }
-  }
-
-  .lecture_info {
-    width: 100%;
-    border-bottom: 1px $mat-border-light solid;
-    padding-bottom: $padding-6;
-  }
-
-  .lecture_location {
-    @include mat-font-caption();
-    padding-bottom: $padding-3;
-  }
-  
-  .lecture_speaker {
-    display: flex;
-  }
-
-  .lecture_title {
-    display: block;
-    padding-bottom: $padding-4;
-  }
-
-  .lecture_speaker__avatar {
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50%;
-    width: 50px;
-    height: 50px;
-    margin-right: $padding-6;
-  }
-
-  .lecture_speaker_info__name {
-    @include mat-font-body();
-    padding-bottom: $padding-1;
-  }
-
-  .lecture_speaker_info_company {
-    @include mat-font-caption();
-  }
-
-  .lecture_actions {
-    margin-left: auto;
   }
 }
