--- a/lib/src/styles/main.scss
+++ b/lib/src/styles/main.scss
@@ -6,3 +6,9 @@ $padding-3: 6px;
 $padding-4: 8px;
 $padding-5: 10px;
 $padding-6: 12px;
+
+@mixin font-caption {
+  color: $mat-text-secondary;
+  font: $mat-font-weight-regular $mat-font-size-caption $mat-font-family;
+  letter-spacing: font-tracking(20);
+}
