--- a/lib/app_component.scss
+++ b/lib/app_component.scss
@@ -1,6 +1,6 @@
 :host {
-  //display: block;
-  //height: 100%;
-  //position: relative;
-  //width: 100%;
+  display: block;
+  height: 100%;
+  position: relative;
+  width: 100%;
 }
