data load improvements

--- a/lib/app_component.scss
+++ b/lib/app_component.scss
@@ -3,4 +3,13 @@
   height: 100%;
   position: relative;
   width: 100%;
+
+  .hidden {
+    display: none;
+  }
+
+  .info {
+    text-align: center;
+    margin: 20px 10px;
+  }
 }
