Create model for Section. Add section loading. Display section in list

--- a/lib/src/components/lectures/lectures.html
+++ b/lib/src/components/lectures/lectures.html
@@ -34,6 +34,11 @@
       </div>
 
       <div
+        class="lecture_section">
+        {{ lecture.section.title }}
+      </div>
+
+      <div
         class="lecture_title">
         {{ lecture.title }}
       </div>
