--- a/lib/src/components/lectures/lectures.html
+++ b/lib/src/components/lectures/lectures.html
@@ -36,6 +36,11 @@
       <div
         class="lecture_section">
         {{ lecture.section.title }}
+
+        <div
+          class="lecture_language">
+          {{ lecture.lang }}
+        </div>
       </div>
 
       <div
