--- a/lib/src/components/lectures/lectures.html
+++ b/lib/src/components/lectures/lectures.html
@@ -39,7 +39,7 @@
 
         <div
           class="lecture_language">
-          {{ lecture.language }}
+          {{ getFlag(lecture) }}
         </div>
       </div>
 
