--- a/lib/src/components/lectures/lectures.html
+++ b/lib/src/components/lectures/lectures.html
@@ -6,81 +6,92 @@
   </layout-actions>
 
   <div
-    *ngFor="let lecture of lectures"
-    content
-    class="lecture">
+    content>
+
+    <button
+      *ngFor="let section of sections"
+      (click)="onSectionClick(section)"
+      [class.selected]="isSectionSelected(section)">
+
+      {{ section.title }}
+    </button>
 
     <div
-      class="lecture__time">
+      *ngFor="let lecture of lectures"
+      class="lecture">
 
       <div
-        class="lecture_time_line">
-      </div>
-
-      <div
-        class="lecture_time_start">
-
-        {{ getStartTime(lecture) }}
-      </div>
-
-      <div
-        class="lecture_time_end">
-
-        {{ getEndTime(lecture) }}
-      </div>
-    </div>
-
-    <div
-      (click)="onLectureSelect(lecture)"
-      class="lecture__info">
-
-      <div
-        class="lecture_location">
-        {{ lecture.location.title }}
-      </div>
-
-      <div
-        class="lecture_section">
-        {{ lecture.section.title }}
+        class="lecture__time">
 
         <div
-          class="lecture_language">
-          {{ getFlag(lecture) }}
+          class="lecture_time_line">
+        </div>
+
+        <div
+          class="lecture_time_start">
+
+          {{ getStartTime(lecture) }}
+        </div>
+
+        <div
+          class="lecture_time_end">
+
+          {{ getEndTime(lecture) }}
         </div>
       </div>
 
       <div
-        class="lecture_title">
-        {{ lecture.title }}
-      </div>
-
-      <div
-        *ngFor="let speaker of lecture.speakers; let i = index"
-        class="lecture__speaker">
-
-        <img
-          [src]="speaker.avatarPath"
-          class="lecture_speaker_avatar">
+        (click)="onLectureSelect(lecture)"
+        class="lecture__info">
 
         <div
-          class="lecture_speaker__info">
+          class="lecture_location">
+          {{ lecture.location.title }}
+        </div>
+
+        <div
+          class="lecture_section">
+          {{ lecture.section.title }}
 
           <div
-            class="lecture_speaker_info_name">
-            {{ speaker.name }}
-          </div>
-
-          <div
-            class="lecture_speaker_info_company">
-            {{ speaker.company }}
+            class="lecture_language">
+            {{ getFlag(lecture) }}
           </div>
         </div>
 
         <div
-          *ngIf="lecture.speakers.length == i + 1"
-          class="lecture__actions">
+          class="lecture_title">
+          {{ lecture.title }}
+        </div>
 
-          <actions></actions>
+        <div
+          *ngFor="let speaker of lecture.speakers; let i = index"
+          class="lecture__speaker">
+
+          <img
+            [src]="speaker.avatarPath"
+            class="lecture_speaker_avatar">
+
+          <div
+            class="lecture_speaker__info">
+
+            <div
+              class="lecture_speaker_info_name">
+              {{ speaker.name }}
+            </div>
+
+            <div
+              class="lecture_speaker_info_company">
+              {{ speaker.company }}
+            </div>
+          </div>
+
+          <div
+            *ngIf="lecture.speakers.length == i + 1"
+            class="lecture__actions">
+
+            <actions></actions>
+          </div>
         </div>
       </div>
     </div>
