--- a/lib/src/components/containers/login_container/login_container.html
+++ b/lib/src/components/containers/login_container/login_container.html
@@ -2,3 +2,7 @@
 <button class="btn__login vk" (click)="loginFacebook()">Вход через Facebook</button>
 <button class="btn__login vk" (click)="loginGitHub()">Вход через GitHub</button>
 
+<button
+  (click)="onClose()">
+  Пропустить
+</button>
