--- a/lib/src/components/containers/lectures_container/lectures_container.html
+++ b/lib/src/components/containers/lectures_container/lectures_container.html
@@ -1,118 +1,122 @@
-<layout
-  [title]="'Lectures'">
+<loader
+  [isReady]="isReady">
 
-  <layout-actions
-    actions
-    [searchText]="searchText"
-    [isSearchMode]="isSearchMode"
-    (onSearch)="onSearch($event)"
-    (onSearchModeChange)="onSearchModeChange($event)"
-    (onFilter)="onFilter()">
-  </layout-actions>
+  <layout
+    [title]="'Lectures'">
 
-  <div
-    content>
-
-    <button
-      (click)="onShowAllClick()"
-      [class.selected]="isShowAllVisible">
-
-      Все
-    </button>
-
-    <button
-      (click)="onShowFavoriteClick()"
-      [class.selected]="isFavoriteVisible">
-
-      Избранные
-    </button>
-
-    <button
-      *ngFor="let section of sections"
-      (click)="onShowSectionClick(section)"
-      [class.selected]="isShowSectionVisible(section)">
-
-      {{ section.title }}
-    </button>
+    <layout-actions
+      actions
+      [searchText]="searchText"
+      [isSearchMode]="isSearchMode"
+      (onSearch)="onSearch($event)"
+      (onSearchModeChange)="onSearchModeChange($event)"
+      (onFilter)="onFilter()">
+    </layout-actions>
 
     <div
-      *ngFor="let lecture of lectures"
-      class="lecture">
+      content>
+
+      <button
+        (click)="onShowAllClick()"
+        [class.selected]="isShowAllVisible">
+
+        Все
+      </button>
+
+      <button
+        (click)="onShowFavoriteClick()"
+        [class.selected]="isFavoriteVisible">
+
+        Избранные
+      </button>
+
+      <button
+        *ngFor="let section of sections"
+        (click)="onShowSectionClick(section)"
+        [class.selected]="isShowSectionVisible(section)">
+
+        {{ section.title }}
+      </button>
 
       <div
-        class="lecture__time">
+        *ngFor="let lecture of lectures"
+        class="lecture">
 
         <div
-          class="lecture_time_line">
-        </div>
-
-        <div
-          class="lecture_time_start">
-
-          {{ startTime(lecture) }}
-        </div>
-
-        <div
-          class="lecture_time_end">
-
-          {{ endTime(lecture) }}
-        </div>
-      </div>
-
-      <div
-        (click)="onLectureSelect(lecture)"
-        class="lecture__info">
-
-        <div
-          class="lecture_location">
-          {{ lecture.location.title }}
-        </div>
-
-        <div
-          class="lecture_section">
-          {{ lecture.section.title }}
+          class="lecture__time">
 
           <div
-            class="lecture_language">
-            {{ flag(lecture) }}
+            class="lecture_time_line">
+          </div>
+
+          <div
+            class="lecture_time_start">
+
+            {{ startTime(lecture) }}
+          </div>
+
+          <div
+            class="lecture_time_end">
+
+            {{ endTime(lecture) }}
           </div>
         </div>
 
         <div
-          class="lecture_title">
-          {{ lecture.title }}
-        </div>
-
-        <div
-          *ngFor="let speaker of lecture.speakers; let i = index"
-          class="lecture__speaker">
-
-          <img
-            [src]="speaker.avatarPath"
-            class="lecture_speaker_avatar">
+          (click)="onLectureSelect(lecture)"
+          class="lecture__info">
 
           <div
-            class="lecture_speaker__info">
+            class="lecture_location">
+            {{ lecture.location.title }}
+          </div>
+
+          <div
+            class="lecture_section">
+            {{ lecture.section.title }}
 
             <div
-              class="lecture_speaker_info_name">
-              {{ speaker.name }}
-            </div>
-
-            <div
-              class="lecture_speaker_info_company">
-              {{ speaker.company }}
+              class="lecture_language">
+              {{ flag(lecture) }}
             </div>
           </div>
 
           <div
-            *ngIf="lecture.speakers.length == i + 1"
-            class="lecture__actions">
+            class="lecture_title">
+            {{ lecture.title }}
+          </div>
 
-            <actions></actions>
+          <div
+            *ngFor="let speaker of lecture.speakers; let i = index"
+            class="lecture__speaker">
+
+            <img
+              [src]="speaker.avatarPath"
+              class="lecture_speaker_avatar">
+
+            <div
+              class="lecture_speaker__info">
+
+              <div
+                class="lecture_speaker_info_name">
+                {{ speaker.name }}
+              </div>
+
+              <div
+                class="lecture_speaker_info_company">
+                {{ speaker.company }}
+              </div>
+            </div>
+
+            <div
+              *ngIf="lecture.speakers.length == i + 1"
+              class="lecture__actions">
+
+              <actions></actions>
+            </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
-</layout>
+  </layout>
+</loader>
