--- a/lib/src/components/containers/empty_container/empty_container.html
+++ b/lib/src/components/containers/empty_container/empty_container.html
@@ -1,5 +1,9 @@
-<h2
-  class="info">
+<layout
+		[title]="'404'">
 
-  Упс, похоже мы не нашли то, что вы искали :(
-</h2>
+	<h2
+			class="info">
+		Упппс... мы не понимаем, чего ты хочешь.
+		Жми на кнопку -- приходи на стенд Wrike!
+	</h2>
+</layout>
