--- a/lib/src/components/containers/empty_container/empty_container.html
+++ b/lib/src/components/containers/empty_container/empty_container.html
@@ -1,9 +1,13 @@
 <layout
 		[title]="'404'">
 
-	<h2
-			class="info">
-		Упппс... мы не понимаем, чего ты хочешь.
-		Жми на кнопку -- приходи на стенд Wrike!
-	</h2>
+	<div
+			content>
+
+		<h2
+				class="info">
+			Упппс... мы не понимаем, чего ты хочешь.
+			Жми на кнопку -- приходи на стенд Wrike!
+		</h2>
+	</div>
 </layout>
