--- a/lib/src/components/layout/layout.scss
+++ b/lib/src/components/layout/layout.scss
@@ -1,4 +1,18 @@
 :host {
   display: block;
-  min-height: 400px;
+  height: 100%;
+  position: relative; // for drawer
+
+  .layout__content {
+    display: grid;
+    grid-template-rows: [header] auto [content] 100%;
+    height: 100%;
+    position: relative;
+    z-index: 0;
+  }
+
+  .content {
+    height: 100%;
+    overflow-y: auto;
+  }
 }
