--- a/lib/src/components/loader/loader.html
+++ b/lib/src/components/loader/loader.html
@@ -1,12 +1,13 @@
 <div
   *ngIf="!isReady"
-  class="loader">
+  class="loader__content">
 
   <material-spinner></material-spinner>
 </div>
 
 <div
-  *ngIf="isReady">
+  *ngIf="isReady"
+  class="loader__content">
 
   <ng-content></ng-content>
 </div>
