Add button component add variables

--- a/web/assets/styles/style.scss
+++ b/web/assets/styles/style.scss
@@ -14,7 +14,7 @@ body {
 }
 
 body {
-  font-family: $font-stack;
+  font-family: $font-family-default;
   -webkit-font-smoothing: antialiased;
   width: 600px;
   margin: 0 auto;
