Add styles for tag button

--- a/lib/src/components/ui/button/button.scss
+++ b/lib/src/components/ui/button/button.scss
@@ -1,8 +1,11 @@
 @import "../../../../../web/assets/styles/variabless.scss";
 
 $button-height: 48px;
-$button-padding-vertical: round(($button-height - $font-line-box-main) / 2);
 $button-padding-horizontal: 16px;
+$button-padding-vertical: round(($button-height - $font-line-box-main) / 2);
+
+$button-tag-height: 24px;
+$button-tag-padding-vertical: round(($button-tag-height - $font-line-box-main) / 2);
 
 :host {
   display: inline-block;
@@ -48,6 +51,25 @@ $button-padding-horizontal: 16px;
   background-origin: border-box;
   color: #ffffff; // todo
   box-shadow: 0 0 40px 0 rgba(51, 167, 216, 0.56); // todo
+
+  &:hover {
+    // todo
+  }
+
+  &:active {
+    // todo
+  }
+
+  &:focus {
+    // todo
+  }
+}
+
+:host(.button--tag) {
+  padding-top: $button-tag-padding-vertical;
+  padding-bottom: $button-tag-padding-vertical;
+  border-color: transparent;
+  border-radius: 4px; // todo
 
   &:hover {
     // todo
