Change styles in normalize

--- a/web/assets/styles/normalize.scss
+++ b/web/assets/styles/normalize.scss
@@ -1,15 +1,17 @@
-/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
+/*! based on normalize.css v5.0.0 | MIT License | github.com/necolas */
+
+/**
+ * 1. Change the default font family in all browsers (opinionated).
+ * 2. Prevent adjustments of font size after orientation changes in
+ *    IE on Windows Phone and in iOS.
+ */
 
 /* Document
    ========================================================================== */
 
-/**
- * 1. Correct the line height in all browsers.
- * 2. Prevent adjustments of font size after orientation changes in iOS.
- */
-
 html {
-    line-height: 1.15; /* 1 */
+    font-family: sans-serif; /* 1 */
+    -ms-text-size-adjust: 100%; /* 2 */
     -webkit-text-size-adjust: 100%; /* 2 */
 }
 
@@ -17,7 +19,7 @@ html {
    ========================================================================== */
 
 /**
- * Remove the margin in all browsers.
+ * Remove the margin in all browsers (opinionated).
  */
 
 body {
@@ -35,24 +37,6 @@ h6 {
 
 p {
     margin: 0;
-}
-
-/**
- * Render the `main` element consistently in IE.
- */
-
-main {
-    display: block;
-}
-
-/**
- * Correct the font size and margin on `h1` elements within `section` and
- * `article` contexts in Chrome, Firefox, and Safari.
- */
-
-h1 {
-    font-size: 2em;
-    margin: 0.67em 0;
 }
 
 /* Grouping content
@@ -83,22 +67,30 @@ pre {
    ========================================================================== */
 
 /**
- * Remove the gray background on active links in IE 10.
+ * Remove gaps in links underline in iOS 8+ and Safari 8+.
  */
 
 a {
-    background-color: transparent;
+    -webkit-text-decoration-skip: objects;
 }
 
 /**
- * 1. Remove the bottom border in Chrome 57-
- * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
+ * Remove the outline on focused links when they are also active or hovered
+ * in all browsers (opinionated).
+ */
+
+a:active,
+a:hover {
+    outline-width: 0;
+}
+
+/**
+ * Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
  */
 
 abbr[title] {
-    border-bottom: none; /* 1 */
-    text-decoration: underline; /* 2 */
-    text-decoration: underline dotted; /* 2 */
+    text-decoration: underline;
+    text-decoration: underline dotted;
 }
 
 /**
@@ -151,22 +143,25 @@ sup {
     top: -0.5em;
 }
 
-/* Embedded content
-   ========================================================================== */
-
 /**
- * Remove the border on images inside links in IE 10.
+ * Prevent text blurriness in Firefox on macOS
+ * link: https://stackoverflow.com/a/44898465
  */
+@supports (-moz-appearance: meterbar) and (background-blend-mode: difference, normal) {
 
-img {
-    border-style: none;
+    body {
+        -moz-osx-font-smoothing: grayscale;
+    }
 }
 
 /* Forms
    ========================================================================== */
 
 /**
- * 1. Change the font styles in all browsers.
+ * 1. Change the font styles in all browsers (opinionated).
+      (commented because of the excessive selector weight
+       while normalization is screened
+       todo: [crafting-normalize] uncomment when it's rolled)
  * 2. Remove the margin in Firefox and Safari.
  */
 
@@ -175,9 +170,8 @@ input,
 optgroup,
 select,
 textarea {
-    font-family: inherit; /* 1 */
-    font-size: 100%; /* 1 */
-    line-height: 1.15; /* 1 */
+    // font-family: sans-serif; /* 1 */
+    // font-size: 100%; /* 1 */
     margin: 0; /* 2 */
 }
 
@@ -202,14 +196,19 @@ select { /* 1 */
 }
 
 /**
- * Correct the inability to style clickable types in iOS and Safari.
+ * 1. Prevent a WebKit bug where (2) destroys native `audio` and `video`
+ *    controls in Android 4.
+ * 2. Correct the inability to style clickable types in iOS and Safari.
  */
 
 button,
-[type="button"],
+html [type="button"], /* 1 */
 [type="reset"],
-[type="submit"] {
-    -webkit-appearance: button;
+[type="submit"],
+textarea,
+input[type="text"],
+input[type="password"] {
+    -webkit-appearance: none; /* 2 */
 }
 
 /**
@@ -232,15 +231,17 @@ button:-moz-focusring,
 [type="button"]:-moz-focusring,
 [type="reset"]:-moz-focusring,
 [type="submit"]:-moz-focusring {
-    outline: 1px dotted ButtonText;
+    outline: none;
 }
 
 /**
- * Correct the padding in Firefox.
+ * Change the border, margin, and padding in all browsers (opinionated).
  */
 
 fieldset {
-    padding: 0.35em 0.75em 0.625em;
+    border: none;
+    margin: 0;
+    padding: 0;
 }
 
 /**
@@ -253,46 +254,25 @@ fieldset {
 legend {
     box-sizing: border-box; /* 1 */
     color: inherit; /* 2 */
-    display: table; /* 1 */
     max-width: 100%; /* 1 */
     padding: 0; /* 3 */
     white-space: normal; /* 1 */
 }
 
 /**
- * Add the correct vertical alignment in Chrome, Firefox, and Opera.
+ * 2. Add the correct vertical alignment in Chrome, Firefox, and Opera.
  */
 
 progress {
-    vertical-align: baseline;
+    vertical-align: baseline; /* 2 */
 }
 
 /**
- * Remove the default vertical scrollbar in IE 10+.
+ * Remove the default vertical scrollbar in IE.
  */
 
 textarea {
     overflow: auto;
-}
-
-/**
- * 1. Add the correct box sizing in IE 10.
- * 2. Remove the padding in IE 10.
- */
-
-[type="checkbox"],
-[type="radio"] {
-    box-sizing: border-box; /* 1 */
-    padding: 0; /* 2 */
-}
-
-/**
- * Correct the cursor style of increment and decrement buttons in Chrome.
- */
-
-[type="number"]::-webkit-inner-spin-button,
-[type="number"]::-webkit-outer-spin-button {
-    height: auto;
 }
 
 /**
@@ -301,14 +281,15 @@ textarea {
  */
 
 [type="search"] {
-    -webkit-appearance: textfield; /* 1 */
+    -webkit-appearance: none; /* 1 */
     outline-offset: -2px; /* 2 */
 }
 
 /**
- * Remove the inner padding in Chrome and Safari on macOS.
+ * Remove the inner padding and cancel buttons in Chrome and Safari on macOS.
  */
 
+[type="search"]::-webkit-search-cancel-button,
 [type="search"]::-webkit-search-decoration {
     -webkit-appearance: none;
 }
@@ -319,18 +300,28 @@ textarea {
  */
 
 ::-webkit-file-upload-button {
-    -webkit-appearance: button; /* 1 */
+    -webkit-appearance: none; /* 1 */
     font: inherit; /* 2 */
+}
+
+/**
+ * Fix opacity of a placeholder in Firefox
+ */
+
+input[type="text"]::-moz-placeholder,
+textarea::-moz-placeholder {
+    opacity: 1;
 }
 
 /* Interactive
    ========================================================================== */
 
 /*
- * Add the correct display in Edge, IE 10+, and Firefox.
+ * Add the correct display in Edge, IE, and Firefox.
  */
 
-details {
+details,
+menu {
     display: block;
 }
 
@@ -340,23 +331,4 @@ details {
 
 summary {
     display: list-item;
-}
-
-/* Misc
-   ========================================================================== */
-
-/**
- * Add the correct display in IE 10+.
- */
-
-template {
-    display: none;
-}
-
-/**
- * Add the correct display in IE 10.
- */
-
-[hidden] {
-    display: none;
 }
