--- a/lib/app_component.scss
+++ b/lib/app_component.scss
@@ -1,6 +1,9 @@
+@import "../web/assets/styles/variables.scss";
+
 :host {
   display: block;
   height: 100%;
+  background: $bgr-color;
 
   .hidden {
     display: none;
