Change class names fot button tag, change height

--- a/lib/src/components/ui/button/button.scss
+++ b/lib/src/components/ui/button/button.scss
@@ -1,10 +1,10 @@
-@import "../../../../../web/assets/styles/variabless.scss";
+@import "../../../../../web/assets/styles/variables";
 
 $button-height: 48px;
 $button-padding-horizontal: 16px;
 $button-padding-vertical: round(($button-height - $font-line-box-main) / 2);
 
-$button-tag-height: 24px;
+$button-tag-height: 32px;
 $button-tag-padding-vertical: round(($button-tag-height - $font-line-box-main) / 2);
 
 :host {
@@ -45,12 +45,12 @@ $button-tag-padding-vertical: round(($button-tag-height - $font-line-box-main) /
   }
 }
 
-:host(.button--primary) {
+:host(.button-primary) {
   border-color: transparent;
   background-image: linear-gradient(to right, #33a7d8, #62d3ee); // todo
   background-origin: border-box;
-  color: #ffffff; // todo
   box-shadow: 0 0 40px 0 rgba(51, 167, 216, 0.56); // todo
+  color: #ffffff; // todo
 
   &:hover {
     // todo
@@ -65,11 +65,16 @@ $button-tag-padding-vertical: round(($button-tag-height - $font-line-box-main) /
   }
 }
 
-:host(.button--tag) {
+:host(.button-tag) {
   padding-top: $button-tag-padding-vertical;
   padding-bottom: $button-tag-padding-vertical;
   border-color: transparent;
   border-radius: 4px; // todo
+  box-shadow: 0 2px 23px 0 rgba(0, 0, 0, 0.06); // todo
+
+  &:not(.button-primary) {
+    color: $font-color-secondary;
+  }
 
   &:hover {
     // todo
@@ -84,7 +89,7 @@ $button-tag-padding-vertical: round(($button-tag-height - $font-line-box-main) /
   }
 }
 
-:host(.button--block) {
+:host(.button-block) {
   display: block;
   width: 100%;
 }
